--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-mask_01_optics.madx linguist-language=fortran
+mask_01_optics.madx linguist-language=C
 mask_02_lumilevel_and_bb.madx linguist-language=C++
