--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,33 @@ tests/injection/old/temp/sliceho.res
 tests/injection/old/temp/surveyaux.tfs
 tests/injection/old/temp/tripD1D2.errors
 tests/injection/old/temp/twiss.tfs
+tests/collision/hl14_collisions.mask.unmasked
+tests/collision/mask_code
+tests/collision/twiss_bpm_unperturbed.tfs
+tests/collision/old/old.mask.unmasked
+tests/collision/old/twiss_bpm_unperturbed.tfs
+tests/collision/temp/MB_corr_setting.mad
+tests/collision/temp/MB.errors
+tests/collision/temp/MCX_setting.mad
+tests/collision/temp/optics0_inser.mad
+tests/collision/temp/optics0_MB.mad
+tests/collision/temp/sliceho.input
+tests/collision/temp/sliceho.madx
+tests/collision/temp/sliceho.res
+tests/collision/temp/surveyaux.tfs
+tests/collision/temp/tripD1D2.errors
+tests/collision/temp/twiss.tfs
+tests/injection/hl14_injection.mask.unmasked
+tests/injection/mask_code
+tests/injection/out
+tests/injection/old/old.mask.unmasked
+tests/injection/old/parameters.txt
+tests/injection/temp/MB_corr_setting.mad
+tests/injection/temp/MB.errors
+tests/injection/temp/optics0_inser.mad
+tests/injection/temp/optics0_MB.mad
+tests/injection/temp/sliceho.input
+tests/injection/temp/sliceho.madx
+tests/injection/temp/sliceho.res
+tests/injection/temp/surveyaux.tfs
+tests/injection/temp/twiss.tfs
