--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,32 @@ tests/make_train_input/train-output/train.optf
 tests/make_train_input/train-output/train.surb
 tests/make_train_input/train-output/train.surf
 tests/make_train_input/.out.swp
+.unmask.py.swp
+tests/hl_lhc_collision/hl14_collisions.mask.unmasked
+tests/hl_lhc_collision/mask_code
+tests/hl_lhc_collision/out
+tests/hl_lhc_collision/old/old.mask
+tests/hl_lhc_collision/old/old.mask.unmasked
+tests/hl_lhc_collision/old/out
+tests/hl_lhc_collision/old/temp/MB_corr_setting.mad
+tests/hl_lhc_collision/old/temp/MB.errors
+tests/hl_lhc_collision/old/temp/MCX_setting.mad
+tests/hl_lhc_collision/old/temp/optics0_inser.mad
+tests/hl_lhc_collision/old/temp/optics0_MB.mad
+tests/hl_lhc_collision/old/temp/sliceho.input
+tests/hl_lhc_collision/old/temp/sliceho.madx
+tests/hl_lhc_collision/old/temp/sliceho.res
+tests/hl_lhc_collision/old/temp/surveyaux.tfs
+tests/hl_lhc_collision/old/temp/tripD1D2.errors
+tests/hl_lhc_collision/old/temp/twiss.tfs
+tests/hl_lhc_collision/temp/MB_corr_setting.mad
+tests/hl_lhc_collision/temp/MB.errors
+tests/hl_lhc_collision/temp/MCX_setting.mad
+tests/hl_lhc_collision/temp/optics0_inser.mad
+tests/hl_lhc_collision/temp/optics0_MB.mad
+tests/hl_lhc_collision/temp/sliceho.input
+tests/hl_lhc_collision/temp/sliceho.madx
+tests/hl_lhc_collision/temp/sliceho.res
+tests/hl_lhc_collision/temp/surveyaux.tfs
+tests/hl_lhc_collision/temp/tripD1D2.errors
+tests/hl_lhc_collision/temp/twiss.tfs
