Commenting emittance_norm

--- a/.gitignore
+++ b/.gitignore
@@ -253,3 +253,29 @@ tests/hl_lhc_collision/temp/sliceho.res
 tests/hl_lhc_collision/temp/surveyaux.tfs
 tests/hl_lhc_collision/temp/tripD1D2.errors
 tests/hl_lhc_collision/temp/twiss.tfs
+tests/hl_lhc_collision/buildsequence.madx
+tests/hl_lhc_injection/buildsequence.madx
+tests/hl_lhc_injection/hl14_injection.mask.unmasked
+tests/hl_lhc_injection/mask_code
+tests/hl_lhc_injection/out
+tests/hl_lhc_injection/old/old.mask.unmasked
+tests/hl_lhc_injection/old/out
+tests/hl_lhc_injection/old/temp/MB_corr_setting.mad
+tests/hl_lhc_injection/old/temp/MB.errors
+tests/hl_lhc_injection/old/temp/optics0_inser.mad
+tests/hl_lhc_injection/old/temp/optics0_MB.mad
+tests/hl_lhc_injection/old/temp/sliceho.input
+tests/hl_lhc_injection/old/temp/sliceho.madx
+tests/hl_lhc_injection/old/temp/sliceho.res
+tests/hl_lhc_injection/old/temp/surveyaux.tfs
+tests/hl_lhc_injection/old/temp/twiss.tfs
+tests/hl_lhc_injection/temp/MB_corr_setting.mad
+tests/hl_lhc_injection/temp/MB.errors
+tests/hl_lhc_injection/temp/optics0_inser.mad
+tests/hl_lhc_injection/temp/optics0_MB.mad
+tests/hl_lhc_injection/temp/sliceho.input
+tests/hl_lhc_injection/temp/sliceho.madx
+tests/hl_lhc_injection/temp/sliceho.res
+tests/hl_lhc_injection/temp/surveyaux.tfs
+tests/hl_lhc_injection/temp/twiss.tfs
+tests/make_train_input/buildsequence.madx
