--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,37 @@ examples/hl_lhc_collision/reference/temp/sliceho.res
 examples/hl_lhc_collision/reference/temp/surveyaux.tfs
 examples/hl_lhc_collision/reference/temp/tripD1D2.errors
 examples/hl_lhc_collision/reference/temp/twiss.tfs
+examples/hl_lhc_injection/errors
+examples/hl_lhc_injection/machines
+examples/hl_lhc_injection/make_sequence.madx
+examples/hl_lhc_injection/modules
+examples/hl_lhc_injection/optics.madx
+examples/hl_lhc_injection/out
+examples/hl_lhc_injection/tools
+examples/hl_lhc_injection/tracking_tools
+examples/hl_lhc_injection/twiss_bpm_unperturbed.tfs
+examples/hl_lhc_injection/twiss_crossing_disable.b1
+examples/hl_lhc_injection/twiss_crossing_disable.b2
+examples/hl_lhc_injection/twiss_crossing_enable.b1
+examples/hl_lhc_injection/twiss_crossing_enable.b2
+examples/hl_lhc_injection/temp/optics0_inser.mad
+examples/hl_lhc_injection/temp/optics0_MB.mad
+examples/hl_lhc_injection/temp/sliceho.input
+examples/hl_lhc_injection/temp/sliceho.madx
+examples/hl_lhc_injection/temp/sliceho.res
+examples/hl_lhc_injection/temp/surveyaux.tfs
+examples/hl_lhc_injection/temp/twiss.tfs
+examples/hl_lhc_injection/error_all.tfs
+examples/hl_lhc_injection/reference/out
+examples/hl_lhc_injection/reference/twiss_bpm_unperturbed.tfs
+examples/hl_lhc_injection/reference/temp/MB_corr_setting.mad
+examples/hl_lhc_injection/reference/temp/MB.errors
+examples/hl_lhc_injection/reference/temp/optics0_inser.mad
+examples/hl_lhc_injection/reference/temp/optics0_MB.mad
+examples/hl_lhc_injection/reference/temp/sliceho.input
+examples/hl_lhc_injection/reference/temp/sliceho.madx
+examples/hl_lhc_injection/reference/temp/sliceho.res
+examples/hl_lhc_injection/reference/temp/surveyaux.tfs
+examples/hl_lhc_injection/reference/temp/twiss.tfs
+examples/hl_lhc_injection/temp/MB_corr_setting.mad
+examples/hl_lhc_injection/temp/MB.errors
