--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,21 @@ examples/hl_lhc_injection/reference/temp/surveyaux.tfs
 examples/hl_lhc_injection/reference/temp/twiss.tfs
 examples/hl_lhc_injection/temp/MB_corr_setting.mad
 examples/hl_lhc_injection/temp/MB.errors
+examples/run3_collision/errors
+examples/run3_collision/machines
+examples/run3_collision/make_sequence.madx
+examples/run3_collision/modules
+examples/run3_collision/optics.madx
+examples/run3_collision/out
+examples/run3_collision/tools
+examples/run3_collision/tracking_tools
+examples/run3_collision/twiss_crossing_disable.b1
+examples/run3_collision/twiss_crossing_disable.b2
+examples/run3_collision/twiss_crossing_enable.b1
+examples/run3_collision/twiss_crossing_enable.b2
+examples/run3_collision/temp/sliceho.input
+examples/run3_collision/temp/sliceho.madx
+examples/run3_collision/temp/sliceho.res
+examples/run3_collision/temp/surveyaux.tfs
+examples/run3_collision/temp/twiss.tfs
+examples/run3_collision/last_twiss.0.gz
