--- a/python_examples/test_coupling_tune_chromaticity/config.yaml
+++ b/python_examples/test_coupling_tune_chromaticity/config.yaml
@@ -19,7 +19,7 @@ links:
 #     'b1_with_bb_legacy_macros
 #     'b4_without_bb'
 
-mode: b1_with_bb
+mode: b1_with_bb_legacy_macros
 
 # For test against madx mask for modes 
 # 'b4_from_b2_without_bb' and 'b4_without_bb':
