--- a/python_examples/run3_collisions_wire/config.yaml
+++ b/python_examples/run3_collisions_wire/config.yaml
@@ -19,13 +19,14 @@ links:
 #     'b1_with_bb_legacy_macros
 #     'b4_without_bb'
 
-mode: b1_with_bb
+mode: b4_from_b2_with_bb
 
 #=========================
 # Wire compensation
-install_wires: true
-enable_QFF   : true
-wires_L      : 1       #[m] Physical lenght of the wires
+install_wires    : true
+wires_at_fallback: true
+enable_QFF       : true
+wires_L          : 1       #[m] Physical lenght of the wires
 #=========================
 
 
