--- a/python_examples/hl_lhc_collisions_python/config.yaml
+++ b/python_examples/hl_lhc_collisions_python/config.yaml
@@ -1,6 +1,6 @@
 # Links to be made for tools and scripts
 links:
-  tracking_tools: /afs/cern.ch/eng/tracking-tools
+  tracking_tools: auto
   modules: tracking_tools/modules
   tools: tracking_tools/tools
   beambeam_macros: tracking_tools/beambeam_macros
