--- a/python_examples/hl_lhc_collisions_001_b4_no_bb/config.yaml
+++ b/python_examples/hl_lhc_collisions_001_b4_no_bb/config.yaml
@@ -19,7 +19,7 @@ links:
 #     'b1_with_bb_legacy_macros
 #     'b4_without_bb'
 
-mode: b4_without_bb
+mode: b4_from_b2_without_bb
 
 # For test against madx mask for modes 
 # 'b4_from_b2_without_bb' and 'b4_without_bb':
