--- a/python_examples/hl_lhc_collisions_001_b4_no_bb/config.yaml
+++ b/python_examples/hl_lhc_collisions_001_b4_no_bb/config.yaml
@@ -174,10 +174,10 @@ knob_settings:
   on_sol_alice: 0
 
 # Enable machine imperfections
-enable_imperfections: false
+enable_imperfections: true
 
 # Enable knob synthesis (for coupling correction, if no imperfections)
-enable_knob_synthesis: false
+enable_knob_synthesis: true
 
 # Parameters for machine imperfections
 pars_for_imperfections:
