--- a/python_examples/hl_lhc_collisions_python/config.yaml
+++ b/python_examples/hl_lhc_collisions_python/config.yaml
@@ -177,7 +177,7 @@ knob_settings:
 enable_imperfections: false
 
 # Enable knob synthesis (for coupling correction, if no imperfections)
-enable_knob_synthesis: false
+enable_knob_synthesis: true
 
 # Parameters for machine imperfections
 pars_for_imperfections:
