--- a/python_examples/mxmask_hllhc14_collision/config_mad.yaml
+++ b/python_examples/mxmask_hllhc14_collision/config_mad.yaml
@@ -18,7 +18,7 @@ beam_energy_tot: 7000           # [GeV]
 verbose_mad_parts: true
 
 # Enable machine imperfections
-enable_imperfections: false 
+enable_imperfections: true
 
 # Enable knob synthesis (for coupling correction, if no imperfections)
 enable_knob_synthesis: false
